--- a/mybatis_plus/src/main/resources/application.yml
+++ b/mybatis_plus/src/main/resources/application.yml
@@ -21,4 +21,7 @@ mybatis-plus:
 #全局配置数据库表名前缀
   global-config:
     db-config:
+      #设置表名前缀
       table-prefix: t_
+      #设置统一的主键生成策略
+      id-type: auto
